--- a/foundations/01-css-methods/style.css
+++ b/foundations/01-css-methods/style.css
@@ -1,1 +1,8 @@
-
+div {
+  background: red;
+  text-color: white;
+  font-size: 32px;
+  text-align: center;
+  text-decor: bold;
+}
+# a red background, white text, a font size of 32px, center aligned, and bold
