--- a/foundations/01-css-methods/style.css
+++ b/foundations/01-css-methods/style.css
@@ -5,4 +5,4 @@ div {
   text-align: center;
   font-weight: bold;
 }
-# a red background, white text, a font size of 32px, center aligned, and bold
+/*a red background, white text, a font size of 32px, center aligned, and bold*/
